minor aesthetic fix on landing splash image. Extra padding for mobile devices.

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -318,7 +318,7 @@ hr {
 
 @media screen and (max-width: 500px) {
     .splashContent {
-        height: 150vh;
+        height: 160vh;
     }
 
     .splashContent #centerWelcomeAndCalendar h1 {
@@ -825,7 +825,7 @@ nav img {
     }
 
     nav .container {
-        width: 80%;
+        width: 90%;
         display: block;
         margin: 0 auto;
         border: none;
